# actix-example

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml
src/: db_access.rs  handlers.rs  main.rs  models.rs  routers.rs  state.rs
