[package]
name = "actix-example"
version = "0.1.0"
edition = "2018"
default-run = "teacher-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "2.5.0"
serde = {version = "1.0", features = ["derive"]}
chrono = {version = "0.4.0", features = ["serde"]}

[[bin]]
name = "teacher-service"
